--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,60 @@
           extend: {
             fontFamily: {
               'sans': ['Inter', 'ui-sans-serif', 'system-ui', '-apple-system', 'BlinkMacSystemFont', 'sans-serif'],
+            },
+            colors: {
+              primary: {
+                50: '#eff6ff',
+                100: '#dbeafe',
+                200: '#bfdbfe',
+                300: '#93c5fd',
+                400: '#60a5fa',
+                500: '#3b82f6',
+                600: '#093fb4', // rgb(9, 63, 180)
+                700: '#072f8a',
+                800: '#06256f',
+                900: '#051d59',
+                950: '#041247',
+              },
+              secondary: {
+                50: '#fffcfb', // rgb(255, 252, 251)
+                100: '#fef9f8',
+                200: '#fdf2f0',
+                300: '#fce8e4',
+                400: '#fad8d8', // rgb(255, 216, 216)
+                500: '#f8c4c4',
+                600: '#f5a1a1',
+                700: '#f17e7e',
+                800: '#ed3500', // rgb(237, 53, 0)
+                900: '#c22e00',
+                950: '#9f2600',
+              },
+              accent: {
+                50: '#fffcfb',
+                100: '#fef9f8',
+                200: '#fdf2f0',
+                300: '#fce8e4',
+                400: '#fad8d8',
+                500: '#f8c4c4',
+                600: '#f5a1a1',
+                700: '#f17e7e',
+                800: '#ed3500',
+                900: '#c22e00',
+                950: '#9f2600',
+              },
+              neutral: {
+                50: '#fafafa',
+                100: '#f5f5f5',
+                200: '#e5e5e5',
+                300: '#d4d4d4',
+                400: '#a3a3a3',
+                500: '#737373',
+                600: '#525252',
+                700: '#404040',
+                800: '#262626',
+                900: '#171717',
+                950: '#0a0a0a',
+              }
             }
           }
         }
@@ -59,7 +113,7 @@
   url_for('static', filename='apple-touch-icon.png') }}"
     />
   </head>
-  <body class="max-w-7xl mx-auto p-5 bg-gray-100" style="font-family: 'Inter', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;">
+  <body class="max-w-7xl mx-auto p-5 bg-secondary-50" style="font-family: 'Inter', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;">
     <div id="root"></div>
     <script
       type="text/babel"
